--- a/service.html
+++ b/service.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
+<style>
+    .container-fluid{
+             scroll-snap-type: none;
+    }
+</style>
 
 <body>
-    <div class="container-fluid" style="background-color:#F4F4F8">
+    <div onscroll="header()" class="container-fluid box" style="background-color:#F4F4F8">
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 px-5 mb-4 position-fixed w-100"
             id="nav">
@@ -48,7 +53,7 @@
             </a>
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/index.html" class="nav-link px-2 link-light">HOME</a></li>
-                <li><a href="/service.html" class="nav-link px-2 ">SERVICE</a></li>
+                <li><a href="/service.html" class="nav-link px-2 fc-blue">SERVICE</a></li>
                 <li><a href="/todo.html" class="nav-link px-2 link-light">TODO</a></li>
                 <li><a href="/weare.html" class="nav-link px-2 link-light">WE ARE</a></li>
                 <li><a href="/notice.html" class="nav-link px-2 link-light">NOTICE</a></li>
@@ -58,10 +63,10 @@
             </div>
         </header>
         <section class="row w-100 d-flex justify-content-end box" id="section1" style="background-image: url(/img/service_content_img_1.png);">
-            <div class="col-md-3 box d-flex ">
-                <div class="txt text-start w-100 position-relative d-flex flex-column align-items-center align-items-md-start" style="top: 24%;">
+            <div class="col-xl-3  d-flex box">
+                <div class="txt text-start w-100 position-relative d-flex flex-column align-items-center align-items-xl-start" style="top: 24%;">
                     <div class="mb-5">
-                        <svg class="w-100" xmlns="http://www.w3.org/2000/svg" width="318.251" height="52.767" viewBox="0 0 318.251 52.767">
+                        <svg class="w-100" xmlns="http://www.w3.org/2000/svg" width="318.251" height="52.767" view="0 0 318.251 52.767">
                             <g id="그룹_232" data-name="그룹 232" transform="translate(-25.1 -385)">
                                 <path id="패스_87" data-name="패스 87" d="M36.317,403.664v29.26H50.939l10.468,9.924H25.1V392.6Z"
                                     transform="translate(0 -6.306)" fill="#fff" />
@@ -84,7 +89,7 @@
                             </g>
                         </svg>
                     </div>
-                    <div class="fs-5 text-light text-center text-md-start">
+                    <div class="fs-5 text-light text-center text-xl-start">
                         <p>건전한 E-SPORTS 문화를</p>
                         <p>대중화 시키기 위한 NeFT의</p>
                         <p>LOLPLAY 프로젝트</p>
@@ -93,51 +98,29 @@
                 </div>
             </div>
         </section>
-        <section class="row w-100 d-flex justify-content-center" id="section2" >
-            <div class="col-md-10 box d-flex align-items-center my-5" style="background-color:#fff">
+        <section class="row w-100 d-flex justify-content-center box" id="section2" >
+            <div class="col-md-10  d-flex align-items-center my-5" style="background-color:#fff">
                 <div class="w-100 row position-relative d-flex justify-content-center align-items-center">
-                    <div class="col-12 col-lg-4 text-center text-lg-start" style="color:var(--main-navy)">
+                    <div class="col-lg-4 text-center text-lg-start" style="color:var(--main-navy)">
                         <p class="ff-b fs-1">건전한</p>
                         <p class="fs-1 ff-l">LCK 승부예측</p>
                         <p>-매주 지급하는 문화상품권</p>
                         <p>-편리한 승부예측</p>
                     </div>
-                    <div class="col-12 col-lg-4 d-flex">
-                        <div class="w-50" style="    
-                            background: url(/img/service_content_img_2.png);
-                            height: 540px;
-                            background-size:100%;
-                            z-index: 1;
-                            background-repeat: no-repeat;
-                            translate: 80px;
-                            background-position: center;">
+                    <div class="col-lg-4 d-flex">
+                        <div class="w-50 service-content-img-2">
                         </div>
-                        <div class="w-50" style="    
-                            background: url(/img/service_content_img_2_1.png);
-                            height: 540px;
-                            background-size: 80%;
-                            background-repeat: no-repeat;
-                            transform: rotate(25deg);
-                            z-index: 0;
-                            translate: -40px;
-                            background-position: center;">
+                        <div class="w-50 service-content-img-2-1">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="row w-100 d-flex justify-content-center" id="section3" style="z-index: 2;position: relative;">
-            <div class="col-md-10 box d-flex align-items-center mt-5" style="background-color:#fff">
+        <section class="row w-100 d-flex justify-content-center box" id="section3" style="z-index: 2;position: relative;">
+            <div class="col-md-10  d-flex align-items-center mt-5" style="background-color:#fff">
                 <div class="w-100 row position-relative d-flex justify-content-center align-items-center">
                     <div class="col-12 col-lg-6">
-                        <div 
-                            style="    
-                                background: url(/img/service_content_img_3.png);
-                                background-size: 100%;
-                                background-repeat: no-repeat;
-                                background-position: bottom;
-                                min-height: 475px;
-                            ">
+                        <div class="service-content-img-3">
                         </div>
                     </div>
                     <div class="col-12 col-lg-2 text-center text-lg-start" style="color:var(--main-navy)">
@@ -150,10 +133,7 @@
             </div>
         </section>
         <section class="w-100 d-flex justify-content-center" id="section4">
-            <div class="w-100" style="background: url(/img/service_content_img_4.png);
-    min-height: 40vw;
-    background-position: center;
-    background-size: 130%;"></div>
+            <div class="w-100 ervice-content-img-4" ></div>
         </section>
         <footer class="w-100 text-center px-5 d-flex align-items-center" style="height:220px;">
             <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
@@ -194,8 +174,12 @@
         </footer>
     </div>
 
-
-    <script src="/js/bootstrap.min.js"></script>
+<script>
+    const page = 'service'
+</script>
+<script src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="/js/index.js"></script>
 </body>
-
 </html>
