--- a/todo.html
+++ b/todo.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid " style="background:linear-gradient(0deg, #151F32 0%, #283F65 100%)">
+    <div onscroll="header()" class="container-fluid box" style="background:linear-gradient(0deg, #151F32 0%, #283F65 100%);">
         <header
             class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 px-5 mb-4 position-fixed w-100"
             id="nav">
@@ -51,7 +51,7 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/index.html" class="nav-link px-2 link-light">HOME</a></li>
                 <li><a href="/service.html" class="nav-link px-2 link-light">SERVICE</a></li>
-                <li><a href="/todo.html" class="nav-link px-2 ">TODO</a></li>
+                <li><a href="/todo.html" class="nav-link px-2 fc-blue">TODO</a></li>
                 <li><a href="/weare.html" class="nav-link px-2 link-light">WE ARE</a></li>
                 <li><a href="/notice.html" class="nav-link px-2 link-light">NOTICE</a></li>
             </ul>
@@ -63,32 +63,20 @@
 
 
 
-        <section class=" w-100 d-flex box" id="section1" style="background-image: url(/img/todo_bg_1.png);background-position: center;background-position-y: inherit;">
-            <div class="col-md-12 box d-flex align-items-center my-5">
+        <section class=" w-100 d-flex box h-auto" id="section1" style="background-image: url(/img/todo_bg_1.png);background-position: center;background-position-y: inherit;">
+            
                 <div class="w-100 row position-relative d-flex justify-content-center align-items-center">
-                    <div class="col-12 col-lg-4 text-center text-lg-start text-light txt-shadow">
+                    <div class="col-lg-4 text-center text-lg-start text-light txt-shadow">
+                        <p class="w-25 todo-content-img-1 d-none d-lg-block"></p>
                         <p class="ff-b fs-0">당신의 멋진 순간을</p>
                         <p class="ff-b fs-0">NFT화 시켜 드립니다.</p>
                     </div>
-                    <div class="col-12 col-lg-4 d-flex order-first order-lg-last">
-                        <div class="w-50" style="    
-                                        background: url(/img/todo_content_img_1.png);
-                                        height: 450px;
-                                        background-size:contain;
-                                        z-index: 1;
-                                        background-repeat: no-repeat;
-                                        background-position: center;">
-                        </div>
-                        <div class="w-50" style="    
-                                        background: url(/img/todo_content_img_2.png);
-                                        height: 450px;
-                                        background-size: contain;
-                                        background-repeat: no-repeat;
-                                        background-position: center;">
+                    <div class="col-lg-4 d-flex justify-content-center order-first order-lg-last">
+                        <div class="w-100 todo-content-img-2">
                         </div>
                     </div>
                 </div>
-            </div>
+           
         </section>
         <section class="w-100" id="section2"    style="background: #151F32;">
                 <div class="w-100 row position-relative d-flex justify-content-center align-items-center">
@@ -96,13 +84,7 @@
                         <p class=" w-100 ff-b fs-3 text-center text-light txt-shadow">STORY</p>
                     </div>
                     <div class="col-lg-4 d-flex">
-                        <div class="w-100" style="    
-                            background: url(/img/todo_content_img_3.png);
-                            height: 450px;
-                            background-size:contain;
-                            z-index: 1;
-                            background-repeat: no-repeat;
-                            background-position: center;">
+                        <div class="w-100 todo-content-img-3">
                         </div>
                     </div>
                     <div class="col-lg-4 text-center text-lg-start text-light">
@@ -124,7 +106,7 @@
                 <div class="col-lg-4 d-flex">
                     <div class="w-100 text-center">
                         <img class="me-2 obj-shadow rounded-4" src="/img/nft_0.jpg"  alt="" style="padding-bottom: 0%;
-    max-width: 100%;">
+                    max-width: 50%;">
                     </div>
                 </div>
             </div>
@@ -152,7 +134,7 @@
                 </div>
             </div>
             <div class="col-8 row justify-content-between mb-5 gy-5 gy-xl-0">
-                <div class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center" style="background:#18273F;" alt="">
+                <div class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center" style="" alt="">
                     <div class="d-flex align-items-center justify-content-center w-100" style="height: 196px;">
                         <div class="text-center">
                             <img src="/img/semics.png" height="65" alt="">
@@ -168,14 +150,11 @@
                     </div>
                 </div>
                 <div class="col-xl-1 d-flex align-items-center p-0">
-                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex" style="background: #213556;
-                        height: 4px;
-                        border-radius: 30px;">
-                        <div style="background: #213556; width:14px;height:14px;border-radius: 20px;"></div>
+                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex wire ">
+                        <div ></div>
                     </div>
                 </div>
-                <div class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center"
-                    style="background:#18273F;" alt="">하이
+                <div class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center">
                     <div class="position-absolute check text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20.704" height="15.953" viewBox="0 0 20.704 15.953">
                             <path id="패스_53" data-name="패스 53" d="M-12528.115,3830.927l5.119,8.378,9.709-10.5,1.693-1.832"
@@ -184,15 +163,12 @@
                         </svg>
                     </div>
                 </div>
-                                <div class="col-xl-1 d-flex align-items-center p-0">
-                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex" style="background: #213556;
-                        height: 4px;
-                        border-radius: 30px;">
-                        <div style="background: #213556; width:14px;height:14px;border-radius: 20px;"></div>
+                                <div class="col-xl-1 d-flex align-items-center p-0 ">
+                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex wire">
+                        <div ></div>
                     </div>
                 </div>
-                <div class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center"
-                    style="background:#18273F;" alt="">하이
+                <div class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center">
                     <div class="position-absolute check text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20.704" height="15.953" viewBox="0 0 20.704 15.953">
                             <path id="패스_53" data-name="패스 53" d="M-12528.115,3830.927l5.119,8.378,9.709-10.5,1.693-1.832"
@@ -204,9 +180,7 @@
             </div>  
             <div class="col-8 row justify-content-between gy-5 gy-xl-0">
                 <div
-                    class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center"
-                    style="background:#18273F;"
-                    alt="">하이
+                    class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center">
                     <div class="position-absolute check text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20.704" height="15.953" viewBox="0 0 20.704 15.953">
                             <path id="패스_53" data-name="패스 53" d="M-12528.115,3830.927l5.119,8.378,9.709-10.5,1.693-1.832"
@@ -216,16 +190,12 @@
                     </div>
                 </div>
                                 <div class="col-xl-1 d-flex align-items-center p-0">
-                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex" style="background: #213556;
-                        height: 4px;
-                        border-radius: 30px;">
-                        <div style="background: #213556; width:14px;height:14px;border-radius: 20px;"></div>
+                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex wire">
+                        <div ></div>
                     </div>
                 </div>
                 <div
-                    class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center"
-                    style="background:#18273F;"
-                    alt="">하이
+                    class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center">
                     <div class="position-absolute check text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20.704" height="15.953" viewBox="0 0 20.704 15.953">
                             <path id="패스_53" data-name="패스 53" d="M-12528.115,3830.927l5.119,8.378,9.709-10.5,1.693-1.832"
@@ -235,16 +205,13 @@
                     </div>
                 </div>
                                 <div class="col-xl-1 d-flex align-items-center p-0">
-                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex" style="background: #213556;
-                        height: 4px;
-                        border-radius: 30px;">
-                        <div style="background: #213556; width:14px;height:14px;border-radius: 20px;"></div>
+                    <div class="w-100 d-flex justify-content-center align-items-center d-none d-xl-flex wire">
+                        <div ></div>
                     </div>
                 </div>
                 <div
                     class="col-xl-3 nft rounded-4 roadmap-card position-relative d-flex align-items-end justify-content-center"
-                    style="background:#18273F;"
-                    alt="">하이
+                >하이
                     <div class="position-absolute check text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20.704" height="15.953" viewBox="0 0 20.704 15.953">
                             <path id="패스_53" data-name="패스 53" d="M-12528.115,3830.927l5.119,8.378,9.709-10.5,1.693-1.832"
@@ -290,49 +257,50 @@
                 COPYRIGHT ⓒ NeFT. ALL RIGHTS RESERVED</p>
         </footer>
     </div>
-
-
-    <script src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script>
+    const page = 'todo'
+</script>
+<script src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="/js/index.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
-
-    <script>
-            $('#slick').slick({
-                dots: false,
-                infinite: false,
-                speed: 300,
-                slidesToShow: 9,
-                slidesToScroll: 9,
-                responsive: [
-                    {
-                        breakpoint: 1024,
-                        settings: {
-                            slidesToShow: 6,
-                            slidesToScroll: 6,
-                        }
-                    },
-                    {
-                        breakpoint: 600,
-                        settings: {
-                            slidesToShow: 2,
-                            slidesToScroll: 2
-                        }
-                    },
-                    {
-                        breakpoint: 480,
-                        settings: {
-                            slidesToShow: 1,
-                            slidesToScroll: 1
-                        }
+<script>
+        $('#slick').slick({
+            dots: false,
+            infinite: false,
+            speed: 300,
+            slidesToShow: 9,
+            slidesToScroll: 9,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 6,
+                        slidesToScroll: 6,
                     }
-                    // You can unslick at a given breakpoint now by adding:
-                    // settings: "unslick"
-                    // instead of a settings object
-                ]
-            });
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+                // You can unslick at a given breakpoint now by adding:
+                // settings: "unslick"
+                // instead of a settings object
+            ]
+        });
 
-    </script>
+</script>
 </body>
 
 </html>
